--- a/CSS/main.css
+++ b/CSS/main.css
@@ -45,9 +45,47 @@ body {
     background: #EDEDED;
 }
 
+/* content header */
+.content .content-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.left-header {
+    display: flex;
+    align-items: center;
+}
+
+.left-header .friend-photo img {
+    height: 37px;
+    margin-right: 10px;
+    border-radius: 50%;
+    background: #F4F4F4;
+}
+
+.left-header p:first-child {
+    font-size: 14px;
+}
+
+.left-header p:last-child {
+    font-size: 12px;
+    color: #8D9295;
+}
+
+
+.content-header .right-header a {
+    text-decoration: none;
+    color: #BABABA;
+    margin-right: 15px;
+}
+
+/* content main */
 .content .content-main {
     flex-grow: 1;
     background-image: url(../img/mine.jpg);
+    background-size: 400px 200px;
     overflow-y: auto;
 }
 
@@ -65,6 +103,7 @@ body {
     padding: 10px;
     color: #A5A5A5;
     border: none;
+    border-radius: 3px;
     outline: none;
     transition: box-shadow .1s; 
 }
