add message con risposta in timer

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -114,6 +114,10 @@ body {
 }
 
 /* search */
+.friends-nav {
+    overflow-y: auto;
+}
+
 .friends-nav .search {
     display: flex;
     align-items: center;
